[TVB#124] fix start command line